--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-name: app_environment
-channels:
-  - snowflake
-dependencies:
-  - python=3.8.*
-  - snowflake-snowpark-python=1.23.0
-  - streamlit=1.39.0
+#requirement.txt
+snowflake-snowpark-python
+streamlit
